# deployment

./: .gitattributes  .gitignore  .justfile  .pre-commit-config.yaml  .yamllint.yml  Justfile  README.md  TODO.md  ansible-playbook  ansible-run  ansible.cfg  inventory.conf.example  inventory.yml  peru.yaml  playbook-server.yml  playbook-workstation.yml  playbook.yml  pyproject.toml  reconfigure  site.yml  solo.rb
collections/: requirements.yml
docs/examples/ubuntu/: inventory.local.yml  playbook.local.yml
docs/tilix/: README.md  tilix.dconf
group_vars/: all.yml  src.yml
host_vars/: .gitignore  example.yml  localhost.dist.yml  localhost.yml
host_vars/eevee/: main.yml
host_vars/example/: main.yml  secrets.yml
host_vars/razz-berry/: main.yml
host_vars/umbreon/: main.yml
plays/: windows.yml
roles/base-debian/tasks/: main.yml  wheezy-backports.yml
roles/base/defaults/: main.yml
roles/base/files/: ansible-run  brew.env  git-hub  tmux-attach
roles/base/tasks/: ansible.yml  apt.yml  development.yml  dnf.yml  dotfiles.yml  main.yml  os-debian.yml  os-ubuntu.yml  packages_apt.yml  packages_dnf.yml  packages_fedora.yml  packages_generic.yml  packages_snap.yml  packages_ubuntu.yml  python.yml  shell.yml  sudo.yml  users.yml
roles/base/templates/: sudoers.j2  zshrc
roles/base/vars/: main.yml
roles/deb/tasks/: main.yml
roles/development/files/: git-tag-version
roles/development/tasks/: lang-python-deadsnakes.yml  main.yml  (+8 more)
roles/git/: README.md
site-cookbooks/dotfiles/: metadata.rb
site-cookbooks/system/: metadata.rb
tasks/: apt.yml  deb.yml
(+398 files in other folders)
